--- a/235/235 Home Page/index.html
+++ b/235/235 Home Page/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <main>
-        <head>
-            <link rel = "stylesheet" href="stylesheet.css">
+    <head>
+        <title>
+            Gianluigi Aponte's 235 Page
+        </title>
+        <link rel = "stylesheet" href="stylesheet.css">
+    </head>
+    <body>
+        <main>
             <h1>
                 Gianluigi Aponte's 235 Page
             </h1>
-        </head>
-
-        <body>
             <img src="images/2040D653-A42E-45F5-9C67-F996E1FB92A2.jpeg" alt="photo of me" height="200" id = "image"> 
             <p id = "description">
                 My name is Gianluigi, I'm a third year Game Design and Development student.
@@ -17,35 +19,30 @@
                 I'm hoping to find work in the industry, and hopefully move to a bigger city, and hopefully find a job 
                 I like. 
             </p>
-
-            <ul id="Links">
+            <p>
                 Class Projects
-                <li>
-                    <a href = "">
-                        Project 1 
-                    </a>
-                </li>
-                <li>
-                    <a href = "">
-                        Project 2 
-                    </a>
-                </li>
-                <li>
-                    <a href = "">
-                        Project 3
-                    </a>
-                </li>
-
-                <p> 
-                    <a href="">
-                        Github Repo
-                    </a>
-                </p>
-            </ul>
-        </body>
-    </main>
-
-    <footer>
-
-    </footer>
+                <ul id="Links">
+                    <li>
+                        <a href = "">
+                            Project 1 
+                        </a>
+                    </li>
+                    <li>
+                        <a href = "">
+                            Project 2 
+                        </a>
+                    </li>
+                    <li>
+                        <a href = "">
+                            Project 3
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/ga7120/235">
+                            Github Repo
+                        </a>
+                    </li>
+                </ul>    
+        </main>
+    </body>
 </html>
